# ecom-platform-tracker

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  clean_stores.py  data.json  detect_platform.py  eslint.config.js  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  sites.json  tailwind.config.ts  vite.config.ts
.github/workflows/: daily-docker.yml  deploy.yml  lint.yml  python-lint.yml
assets/: index-1PRXPgDk.js  index-1Um_-Jga.js  index-3lSJWaMj.js  index-5lUOxQ9g.css  index-6mSXkAB_.js  index-8_o3gYkG.js  index-9AdIiCOY.js  index-B7jbzzsF.js  index-B8N8yWlk.js  index-BHQFtDYT.js  index-BIm9cRFe.js  index-BL6ZzmHo.js  index-BRYNcAER.js  index-BWTwQ68h.js  index-B_SpB_Wt.js  index-Bf_5HhbK.js  index-BshAvQJq.js  index-Bx6vOe4z.js  index-BxoA8LKZ.js  index-C3uqCIo2.js  index-C6Lyw328.js  index-C6TAWBWb.js  index-CBLk4DBr.js  index-CBcHkyFQ.js  index-CFQd7ZF_.js  index-CQrQDKmc.js  index-CXbskib2.js  index-Cgq9PTq-.js  index-CkSu1Z9T.js  index-CnhknMEn.js  index-CqplIJ01.js  index-D4itBQUI.js  index-DJcP3g9o.js  index-DM9RZXyL.js  index-DR93P-rM.js  index-DSbkc5vU.js  index-DTNgLxyl.js  index-DbNU9Ez8.js  index-DcBy3in7.js  index-DkvH_kly.js  (+10 more)
detector/: __init__.py  __main__.py  browser.py  config.py  detection.py  fetchers.py  pipeline.py
src/: App.tsx  index.css
src/components/: PlatformChart.tsx  PlatformStats.tsx  PlatformTrendChart.tsx  StatsCard.tsx
src/lib/: PlatformData.ts
src/pages/: Index.tsx
