[project]
name = "ecom-platform-tracker"
version = "0.1.0"
description = "Scrapes tracked sites daily to detect which e-commerce platform each runs."
requires-python = ">=3.11"
dependencies = [
    # Tier 0 fetcher: plain HTTP GET.
    "requests==2.34.2",
    # Tier 1 fetcher: HTTP client with browser TLS/HTTP2 fingerprint
    # impersonation, used to recover sites that block the plain `requests` fetch.
    "curl_cffi==0.15.0",
    "nodriver>=0.50.3",
]

[tool.uv]
# This is an application (run via `python detect_platform.py`), not an
# installable package, so uv only resolves/installs the dependencies above.
package = false

[dependency-groups]
# Dev-only tooling. The Docker build uses `uv sync --no-dev`, so ruff never
# ships in the production image.
dev = [
    "ruff==0.15.16",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# pyflakes (F) + pycodestyle (E/W) + import sorting (I) + pyupgrade (UP)
# + flake8-bugbear (B). A pragmatic default for the small backend scripts.
select = ["E", "W", "F", "I", "UP", "B"]
